[package]
name = "hevc-reader"
version = "0.1.0-dev"
authors = ["Björn Weinehall <bjorn.weinehall@intinor.se>"]
license = "MIT/Apache-2.0"
description = "Reader for HEVC / H265 bitstream syntax"
categories = [ "multimedia::video" ]
keywords = [ "H-265", "HEVC" ]
readme = "README.md"
repository = "https://github.com/bjornwein/hevc-reader"
edition = "2021"

[dependencies]
bitstream-io = "1.1"
hex-slice = "0.1.4"
memchr = "2.1.1"
rfc6381-codec = "0.1"
log = "0.4"

[dev-dependencies]
hex-literal = "0.4.1"
criterion = "0.5"
test-case = "3.0.0"

#[[bench]]
#name = "bench"
#harness = false

#[profile.bench]
## for profiling,
#debug = true
